# FlowerShop

./: .dockerignore  .gitignore  Dockerfile.prod  README.md  docker-compose.prod.yml  pyproject.toml
assets/css/: main.css
config/: settings.py  urls.py  wsgi.py
nginx/: default.conf.template
src/: admin.py  models.py  urls.py  utils.py  views.py
src/bot/: conversations.py  handlers.py  states.py  utils.py
src/management/commands/: tg_bot.py
src/migrations/: 0001_initial.py  0002_alter_order_bouquet_alter_order_client.py  0003_order_status_consultation.py  0004_bouquet_height_bouquet_width.py  0005_alter_order_delivery_time.py  0006_activeorder_alter_order_managers_and_more.py  0006_alter_order_delivery_date_alter_order_delivery_time.py  0007_rename_delivery_time_order_delivery_slot.py  0008_alter_order_delivery_date.py  0009_delete_activeorder_alter_order_managers.py  0010_alter_order_delivery_date.py
src/templates/: base.html  card.html  catalog.html  consultation.html  footer.html  header.html  index.html  order-step.html  order.html  quiz-step.html  quiz.html  result.html
src/templates/components/: consultation.html  contacts.html  footer.html  header.html
src/templates/pages/: card.html  catalog.html  consultation.html  contacts.html  index.html  order.html  recommendations.html
